// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryCard Component should handle expandable guests data: number of guests 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          1,
        ],
        "expandedContent": undefined,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryCard Component should handle expandable guests data: number of guests, and id 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          1,
          "loremIpsum",
        ],
        "expandedContent": <Memo(Connect(GuestsList))
          id="loremIpsum"
          numberOfGuests={1}
        />,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryCard Component should handle expandable guests data: number of guests, id, and NO expandable guests display 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          2,
          "loremIpsum",
        ],
        "expandedContent": undefined,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: error 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={true}
      className="hidden"
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={true}
        className="transparent"
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10-resize"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="blur"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={Array []}
          isHeader={true}
          rows={Array []}
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={true}
      className="hidden"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: fulfilled 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={false}
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10-resize"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className=""
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
              "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  "ipsum",
                  "sit",
                ],
                "expandedContent": undefined,
              },
              Object {
                "cells": Array [
                  "sit",
                  "amet",
                ],
                "expandedContent": undefined,
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={false}
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle multiple display states, error, pending, fulfilled: pending 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={true}
        className="transparent"
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            Object {
              "size": "sm",
            }
          }
          tableProps={
            Object {
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": Array [],
              "rowCount": 10,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={true}
      className="transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle variations in data: filtered data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={false}
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10-resize"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className=""
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              Object {
                "title": "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
                "transforms": Array [],
              },
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  Object {
                    "title": "ipsum",
                  },
                ],
                "expandedContent": undefined,
              },
              Object {
                "cells": Array [
                  Object {
                    "title": "sit",
                  },
                ],
                "expandedContent": undefined,
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={false}
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should handle variations in data: variable data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={false}
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10-resize"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className=""
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
              "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  "ipsum",
                  "sit",
                ],
                "expandedContent": undefined,
              },
              Object {
                "cells": Array [
                  "sit",
                  "amet",
                ],
                "expandedContent": undefined,
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={false}
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={2}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should render a basic component: basic render 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader
      aria-hidden={false}
      className=""
    >
      <CardHeaderMain>
        <ToolbarFieldDisplayName
          t={[Function]}
          useDispatch={[Function]}
          useProduct={[Function]}
          useProductInventoryHostsQuery={[Function]}
        />
      </CardHeaderMain>
      <CardActions
        aria-hidden={true}
        className="transparent"
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Loader
          skeletonProps={
            Object {
              "size": "sm",
            }
          }
          tableProps={
            Object {
              "className": "curiosity-inventory-list",
              "colCount": 1,
              "colWidth": Array [],
              "rowCount": 10,
              "variant": "compact",
            }
          }
          variant="table"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      aria-hidden={true}
      className="transparent"
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={true}
          itemCount={0}
          offset={0}
          onPage={[Function]}
          onPerPage={[Function]}
          perPage={10}
          variant={null}
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryCard Component should return an empty render when disabled: disabled component 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;
